--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <div class="page">
         <!-- Menu -->
         <div class="container-menu">
+            <button class="active-nav" id="btnActivNav">
+                =
+            </button>
             <img src="./imges/1 A 1 (1).png" alt="" class="logo">
-            <nav class="nav-container">
+            <nav class="nav-container" id="nav">
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/">Trabajos</a></li>
@@ -67,12 +70,18 @@
             <section class="seccion contacto">
                 <h3>Contacto</h3>
                 <div class="redes">
-                    <div class="gmail"></div>
-                    <div class="instagram"></div>
-                    <div class="wasap"></div>
+                    <div class="gmail"><img src="./imges/icons/gmail.png" alt=""></div>
+                    <div class="instagram"><img src="./imges/icons/instagram.png" alt=""></div>
+                    <div class="wasap"><img src="./imges/icons/whatsapp.png" alt=""></div>
                 </div>
             </section>
         </main>
+
+        <footer>
+            <div class="quien-hizo">
+                <h3>Construido por marcial fantini</h3>
+            </div>
+        </footer>
 
     </div>
 
